--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "devDependencies": {
-    "concurrently": "^6.2.0",
-    "json-server": "^0.16.3",
-    "typescript": "^4.2.4"
-  },
-  "dependencies": {
-    "axios": "^0.21.1"
-  },
+  "name": "web-framework",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
     "start:db": "./node_modules/.bin/json-server -w db.json",
     "start:parcel": "parcel index.html",
     "start": "concurrently npm:start:*"
+  },
+  "dependencies": {
+    "axios": "^0.21.1"
+  },
+  "devDependencies": {
+    "concurrently": "^6.2.0",
+    "json-server": "^0.16.3",
+    "parcel-bundler": "^1.12.5",
+    "typescript": "^4.2.4"
   }
 }
